try to fix images being too big

--- a/themes/monochrome/assets/scss/base.scss
+++ b/themes/monochrome/assets/scss/base.scss
@@ -1,10 +1,16 @@
-html, button, input, select, textarea,
-.pure-g [class *= "pure-u"] {
-  font-family: system-ui,-apple-system,segoe ui,Roboto,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji;
+html,
+button,
+input,
+select,
+textarea,
+.pure-g [class *="pure-u"] {
+  font-family: system-ui, -apple-system, segoe ui, Roboto, Helvetica, Arial, sans-serif, apple color emoji, segoe ui emoji;
 }
 
-code, kbd, pre {
-  font-family: ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,liberation mono,courier new,monospace;
+code,
+kbd,
+pre {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, liberation mono, courier new, monospace;
 }
 
 body {
@@ -13,7 +19,12 @@ body {
   padding: 1.5rem;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   @include font-bold;
   margin-top: 2rem;
   margin-bottom: 1rem;
@@ -48,7 +59,7 @@ figure {
 }
 
 img {
-  max-width: 100%;
+  max-width: 75%;
   border-radius: 3px;
 }
 
@@ -63,11 +74,11 @@ mark {
   color: var(--color-text-mark);
 }
 
-details > summary {
+details>summary {
   cursor: pointer;
 }
 
-details[open] > summary {
+details[open]>summary {
   cursor: pointer;
 }
 
